Lilac: Cleaning up lint.